# electric-sheep-fold

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  SECURITY.md  VISION.md  pyproject.toml
.claude/skills/pyr3-corpus-index/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: operations.md  release-notes-v0.2.2.md  release-notes-v0.2.5.md  release-notes-v0.3.0.md
docs/superpowers/plans/: 2026-05-19-electric-sheep-fold-v0.1.md  2026-05-19-sheep-sheer-v0.1.md  2026-05-20-electric-sheep-fold-v0.2.md  2026-05-20-sheep-sheer-v0.2.md  2026-05-21-electric-sheep-fold-v0.2.1.md  2026-05-28-corpus-share-url-and-chunk-delivery.md
docs/superpowers/specs/: 2026-05-19-electric-sheep-fold-v0.1-design.md  2026-05-19-sheep-sheer-v0.1-design.md  2026-05-20-electric-sheep-fold-v0.2-chunked-zip.md  2026-05-20-sheep-sheer-v0.2-chunked-zip.md  2026-05-21-electric-sheep-fold-v0.2.1-dead-gen-whole-zip.md  2026-05-22-v0.3-loose-corpus.md  2026-05-23-v0.4-chunked-dated-release-and-index.md  2026-05-23-v0.5-index-malformation-flags-and-xaos-rename.md  2026-05-28-corpus-share-url-and-chunk-delivery-design.md
scripts/: build_release.sh  preserve_archived_sheep.sh  resume_live_fetch.sh  sanitize_scrape_dir.py  scrape_archive_gen.py  seed_scrape_from_local.sh  watch_sweep.sh
src/electric_sheep_fold/: __init__.py  chunk.py  chunks.py  cli.py  extract.py  fetch.py  importer.py  index.py  layout.py  manifest.py  migration.py  release.py  unseal.py
src/electric_sheep_fold/data/: ATTRIBUTION.md  __init__.py
src/sheep_sheer/: __init__.py  cli.py  extract.py  fetch.py  importer.py  layout.py  migration.py
src/sheep_sheer/data/: ATTRIBUTION.md
tests/: test_chunk.py  test_chunks.py  test_cli.py  test_extract.py  test_fetch.py  test_importer.py  test_index.py  test_layout.py  test_manifest.py  test_migration.py  test_release.py  test_scrape_archive.py  test_unseal.py  test_version.py
