[project]
name = "electric-sheep-fold"
version = "0.2.3"
description = "Polite, idempotent mirror of Electric Sheep .flam3 genomes — companion to pyr3"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{ name = "MattAltermatt" }]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sheep-fold = "electric_sheep_fold.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/electric_sheep_fold"]

[tool.hatch.build.targets.wheel.force-include]
"src/electric_sheep_fold/data/ATTRIBUTION.md" = "electric_sheep_fold/data/ATTRIBUTION.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
