[project]
name = "electric-sheep-fold"
dynamic = ["version"]
description = "Polite, idempotent mirror of Electric Sheep .flam3 genomes — companion to pyr3"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{ name = "MattAltermatt" }]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "brotli>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sheep-fold = "electric_sheep_fold.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single-source version (ESF-019): read from electric_sheep_fold.__version__ so
# the package metadata can never drift from the code.
[tool.hatch.version]
path = "src/electric_sheep_fold/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/electric_sheep_fold"]

[tool.hatch.build.targets.wheel.force-include]
"src/electric_sheep_fold/data/ATTRIBUTION.md" = "electric_sheep_fold/data/ATTRIBUTION.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
