[project]
name = "electric-sheep-fold"
dynamic = ["version"]
description = "Polite, idempotent mirror of Electric Sheep .flam3 genomes — companion to pyr3"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{ name = "MattAltermatt" }]
dependencies = [
    "httpx>=0.27",
    "typer>=0.26.3",
    "brotli>=1.1",
    "defusedxml>=0.7",  # ESF-026: safe parsing of untrusted network .flam3 XML
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
sheep-fold = "electric_sheep_fold.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single-source version (ESF-019): read from electric_sheep_fold.__version__ so
# the package metadata can never drift from the code.
[tool.hatch.version]
path = "src/electric_sheep_fold/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/electric_sheep_fold"]

[tool.hatch.build.targets.wheel.force-include]
"src/electric_sheep_fold/data/ATTRIBUTION.md" = "electric_sheep_fold/data/ATTRIBUTION.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

# ESF-031: lint + types, enforced in CI. Baseline ruleset (E/F/I); tighten
# later as deliberate increments.
[tool.ruff]
target-version = "py311"
line-length = 100  # matches the codebase's existing style (88 was never followed)

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
